--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@mantine/spotlight": "^5.3.2",
     "@mdx-js/react": "^2.1.3",
     "@prisma/client": "^4.3.1",
+    "@react-spring/web": "^9.5.4",
     "@tabler/icons": "^1.96.0",
     "dayjs": "^1.11.5",
     "framer-motion": "^7.3.5",
@@ -70,6 +71,8 @@
   "devDependencies": {
     "@next/bundle-analyzer": "12.3.0",
     "@svgr/webpack": "^6.3.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/lodash": "^4.14.185",
