--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next-remote-watch ./src/data/**",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && yarn format",
     "lint:strict": "eslint --max-warnings=0 src",
@@ -26,38 +26,38 @@
     "@emotion/react": "^11.10.4",
     "@emotion/server": "^11.10.0",
     "@giscus/react": "^2.2.0",
-    "@mantine/core": "^5.4.0",
-    "@mantine/dates": "^5.4.0",
-    "@mantine/dropzone": "^5.4.0",
-    "@mantine/form": "^5.4.0",
-    "@mantine/hooks": "^5.4.0",
-    "@mantine/modals": "^5.4.0",
-    "@mantine/next": "^5.4.0",
-    "@mantine/notifications": "^5.4.0",
-    "@mantine/nprogress": "^5.4.0",
-    "@mantine/prism": "^5.4.0",
-    "@mantine/rte": "^5.4.0",
-    "@mantine/spotlight": "^5.4.0",
+    "@mantine/core": "^5.5.2",
+    "@mantine/dates": "^5.5.2",
+    "@mantine/dropzone": "^5.5.2",
+    "@mantine/form": "^5.5.2",
+    "@mantine/hooks": "^5.5.2",
+    "@mantine/modals": "^5.5.2",
+    "@mantine/next": "^5.5.2",
+    "@mantine/notifications": "^5.5.2",
+    "@mantine/nprogress": "^5.5.2",
+    "@mantine/prism": "^5.5.2",
+    "@mantine/rte": "^5.5.2",
+    "@mantine/spotlight": "^5.5.2",
     "@mdx-js/react": "^2.1.3",
-    "@prisma/client": "^4.3.1",
-    "@react-spring/web": "^9.5.4",
-    "@tabler/icons": "^1.96.0",
+    "@prisma/client": "^4.4.0",
+    "@react-spring/web": "^9.5.5",
+    "@tabler/icons": "^1.101.0",
     "dayjs": "^1.11.5",
-    "framer-motion": "^7.3.6",
-    "gitmoji-cli": "^6.2.0",
-    "googleapis": "^107.0.0",
+    "framer-motion": "^7.5.2",
+    "gitmoji-cli": "^7.0.2",
+    "googleapis": "^108.0.0",
     "gray-matter": "^4.0.3",
     "hastscript": "^7.0.2",
     "image-size": "^1.0.2",
     "lodash": "^4.17.21",
     "next": "^12.3.1",
-    "next-auth": "^4.10.3",
+    "next-auth": "^4.12.2",
     "next-mdx-remote": "^4.1.0",
     "next-seo": "^5.5.0",
     "next-translate": "^1.6.0",
     "prism-react-renderer": "^1.3.5",
     "prismjs": "^1.29.0",
-    "puppeteer": "^18.0.4",
+    "puppeteer": "^18.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-autolink-headings": "^6.1.1",
@@ -65,41 +65,42 @@
     "remark": "^14.0.2",
     "remark-gfm": "^3.0.1",
     "rss": "^1.2.2",
-    "sharp": "^0.31.0",
+    "sharp": "^0.31.1",
     "swr": "^1.3.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "12.3.1",
-    "@svgr/webpack": "^6.3.1",
+    "@svgr/webpack": "^6.4.0",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
-    "@types/lodash": "^4.14.185",
-    "@types/node": "^18.7.18",
-    "@types/react": "18.0.20",
+    "@types/lodash": "^4.14.186",
+    "@types/node": "^18.8.2",
+    "@types/react": "18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/rss": "^0.0.29",
-    "@typescript-eslint/eslint-plugin": "5.38.0",
-    "@typescript-eslint/parser": "5.38.0",
+    "@typescript-eslint/eslint-plugin": "5.39.0",
+    "@typescript-eslint/parser": "5.39.0",
     "autoprefixer": "^10.4.12",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
-    "eslint": "^8.23.1",
+    "eslint": "^8.24.0",
     "eslint-config-next": "^12.3.1",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "8.0.1",
-    "jest": "^29.0.3",
-    "jest-environment-jsdom": "^29.0.3",
+    "jest": "^29.1.2",
+    "jest-environment-jsdom": "^29.1.2",
     "lint-staged": "13.0.3",
-    "postcss": "^8.4.16",
+    "next-remote-watch": "^2.0.0",
+    "postcss": "^8.4.17",
     "prettier": "^2.7.1",
-    "prisma": "^4.3.1",
+    "prisma": "^4.4.0",
     "tailwindcss": "^3.1.8",
-    "typescript": "4.8.3"
+    "typescript": "4.8.4"
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx}": [
