--- a/.env
+++ b/.env
@@ -1,25 +1,22 @@
-// For comment (Giscus)
+#!/usr/bin/bash
 NEXT_PUBLIC_GISCUS_REPO=
 NEXT_PUBLIC_GISCUS_REPOSITORY_ID=
 NEXT_PUBLIC_GISCUS_CATEGORY=
 NEXT_PUBLIC_GISCUS_CATEGORY_ID=
 
-// For Spotify
 SPOTIFY_CLIENT_ID=
-SPOTIFY_CLIENT_SECRET=
+SPOTIFY_CLIET_SECRET=
 SPOTIFY_REFRESH_TOKEN=
 
-// For google api and GitHub OAuth
 GOOGLE_PRIVATE_KEY=
 GOOGLE_CLIENT_EMAIL=
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
-// For NextAuth.js and GitHub OAuth
 NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:3000
 OAUTH_CLIENT_KEY=
 OAUTH_CLIENT_SECRET=
 
-// For database
-DATABASE_URL=
+# DATABASE_URL_PROD="postgres://endstdbq:pZHXoEMNCY_JOEu-yyMv2Pp-OZ439xqC@satao.db.elephantsql.com/endstdbq"
+DATABASE_URL="postgres://postgres:ASCii@localhost:5432/personal_blog"
