--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "honghong.me",
+  "name": "Website",
   "private": true,
   "description": "Personal website and blog made using TypeScript, Next.js, Mantine",
-  "author": "小康 <info@honghong.me>",
+  "author": "Phil Ho",
   "license": "MIT",
   "scripts": {
     "dev": "next dev",
@@ -23,41 +23,42 @@
     "test": "jest"
   },
   "dependencies": {
-    "@emotion/react": "^11.10.4",
+    "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@giscus/react": "^2.2.0",
-    "@mantine/core": "^5.5.2",
-    "@mantine/dates": "^5.5.2",
-    "@mantine/dropzone": "^5.5.2",
-    "@mantine/form": "^5.5.2",
-    "@mantine/hooks": "^5.5.2",
-    "@mantine/modals": "^5.5.2",
-    "@mantine/next": "^5.5.2",
-    "@mantine/notifications": "^5.5.2",
-    "@mantine/nprogress": "^5.5.2",
-    "@mantine/prism": "^5.5.2",
-    "@mantine/rte": "^5.5.2",
-    "@mantine/spotlight": "^5.5.2",
-    "@mdx-js/react": "^2.1.3",
-    "@prisma/client": "^4.4.0",
+    "@mantine/core": "^5.6.3",
+    "@mantine/dates": "^5.6.3",
+    "@mantine/dropzone": "^5.6.3",
+    "@mantine/form": "^5.6.3",
+    "@mantine/hooks": "^5.6.3",
+    "@mantine/modals": "^5.6.3",
+    "@mantine/next": "^5.6.3",
+    "@mantine/notifications": "^5.6.3",
+    "@mantine/nprogress": "^5.6.3",
+    "@mantine/prism": "^5.6.3",
+    "@mantine/rte": "^5.6.3",
+    "@mantine/spotlight": "^5.6.3",
+    "@mdx-js/react": "^2.1.5",
+    "@prisma/client": "^4.5.0",
     "@react-spring/web": "^9.5.5",
-    "@tabler/icons": "^1.101.0",
-    "dayjs": "^1.11.5",
-    "framer-motion": "^7.5.2",
+    "@tabler/icons": "^1.108.0",
+    "dayjs": "^1.11.6",
+    "ethers": "^5.7.2",
+    "framer-motion": "^7.6.2",
     "gitmoji-cli": "^7.0.2",
-    "googleapis": "^108.0.0",
+    "googleapis": "^109.0.0",
     "gray-matter": "^4.0.3",
-    "hastscript": "^7.0.2",
+    "hastscript": "^7.1.0",
     "image-size": "^1.0.2",
     "lodash": "^4.17.21",
-    "next": "^12.3.1",
-    "next-auth": "^4.12.2",
+    "next": "^13.0.0",
+    "next-auth": "^4.15.0",
     "next-mdx-remote": "^4.1.0",
-    "next-seo": "^5.5.0",
+    "next-seo": "^5.11.1",
     "next-translate": "^1.6.0",
     "prism-react-renderer": "^1.3.5",
     "prismjs": "^1.29.0",
-    "puppeteer": "^18.1.0",
+    "puppeteer": "^19.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "rehype-autolink-headings": "^6.1.1",
@@ -66,40 +67,41 @@
     "remark-gfm": "^3.0.1",
     "rss": "^1.2.2",
     "sharp": "^0.31.1",
-    "swr": "^1.3.0"
+    "swr": "^1.3.0",
+    "wagmi": "^0.7.8"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "12.3.1",
-    "@svgr/webpack": "^6.4.0",
+    "@next/bundle-analyzer": "13.0.0",
+    "@svgr/webpack": "^6.5.1",
     "@tailwindcss/forms": "^0.5.3",
     "@tailwindcss/typography": "^0.5.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/lodash": "^4.14.186",
-    "@types/node": "^18.8.2",
-    "@types/react": "18.0.21",
-    "@types/react-dom": "^18.0.6",
+    "@types/node": "^18.11.7",
+    "@types/react": "18.0.24",
+    "@types/react-dom": "^18.0.8",
     "@types/rss": "^0.0.29",
-    "@typescript-eslint/eslint-plugin": "5.39.0",
-    "@typescript-eslint/parser": "5.39.0",
-    "autoprefixer": "^10.4.12",
+    "@typescript-eslint/eslint-plugin": "5.41.0",
+    "@typescript-eslint/parser": "5.41.0",
+    "autoprefixer": "^10.4.13",
     "cross-env": "^7.0.3",
     "dedent": "^0.7.0",
-    "eslint": "^8.24.0",
-    "eslint-config-next": "^12.3.1",
+    "eslint": "^8.26.0",
+    "eslint-config-next": "^13.0.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-simple-import-sort": "^8.0.0",
     "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "8.0.1",
-    "jest": "^29.1.2",
-    "jest-environment-jsdom": "^29.1.2",
+    "jest": "^29.2.2",
+    "jest-environment-jsdom": "^29.2.2",
     "lint-staged": "13.0.3",
     "next-remote-watch": "^2.0.0",
-    "postcss": "^8.4.17",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
-    "prisma": "^4.4.0",
-    "tailwindcss": "^3.1.8",
+    "prisma": "^4.5.0",
+    "tailwindcss": "^3.2.1",
     "typescript": "4.8.4"
   },
   "lint-staged": {
