--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "googleapis": "^109.0.0",
     "gray-matter": "^4.0.3",
     "hastscript": "^7.1.0",
+    "html-react-parser": "^3.0.4",
     "image-size": "^1.0.2",
     "lodash": "^4.17.21",
     "next": "^13.0.0",
@@ -59,8 +60,10 @@
     "prism-react-renderer": "^1.3.5",
     "prismjs": "^1.29.0",
     "puppeteer": "^19.2.0",
+    "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^8.0.3",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "5.0.1",
     "remark": "^14.0.2",
