--- a/.env
+++ b/.env
@@ -1,13 +1,5 @@
-#!/usr/bin/bash
-NEXT_PUBLIC_GISCUS_REPO=
-NEXT_PUBLIC_GISCUS_REPOSITORY_ID=
-NEXT_PUBLIC_GISCUS_CATEGORY=
-NEXT_PUBLIC_GISCUS_CATEGORY_ID=
-
-SPOTIFY_CLIENT_ID=
-SPOTIFY_CLIET_SECRET=
-SPOTIFY_REFRESH_TOKEN=
-
+#!/usr/bin/zsh
+# Please note order of priority: https://nextjs.org/docs/basic-features/environment-variables#environment-variable-load-order
 GOOGLE_PRIVATE_KEY=
 GOOGLE_CLIENT_EMAIL=
 GOOGLE_CLIENT_ID=
@@ -18,5 +10,6 @@ NEXTAUTH_URL=http://localhost:3000
 OAUTH_CLIENT_KEY=
 OAUTH_CLIENT_SECRET=
 
-# DATABASE_URL_PROD="postgres://endstdbq:pZHXoEMNCY_JOEu-yyMv2Pp-OZ439xqC@satao.db.elephantsql.com/endstdbq"
-DATABASE_URL="postgres://postgres:ASCii@localhost:5432/personal_blog"
+# DATABASE_URL="postgres://postgres:M:s4poh@Nrynf#fj@34.126.174.215:5432/personal_blog"
+# DATABASE_URL="postgres://postgres:ASCii@localhost:5432/personal_blog"
+# password: M:s4poh@Nrynf#fj
