--- a/.env
+++ b/.env
@@ -11,5 +11,5 @@ OAUTH_CLIENT_KEY=
 OAUTH_CLIENT_SECRET=
 
 # DATABASE_URL="postgres://postgres:M:s4poh@Nrynf#fj@34.126.174.215:5432/personal_blog"
-# DATABASE_URL="postgres://postgres:ASCii@localhost:5432/personal_blog"
+DATABASE_URL="postgres://postgres:ASCii@localhost:5432/personal_blog"
 # password: M:s4poh@Nrynf#fj
