--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "author": "Phil Ho",
   "license": "MIT",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "yarn tinacms dev -c \"next dev\"",
+    "build": "yarn tinacms build && next build",
     "start": "next-remote-watch ./src/data/**",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && yarn format",
@@ -42,6 +42,7 @@
     "@prisma/client": "^4.5.0",
     "@react-spring/web": "^9.5.5",
     "@tabler/icons": "^1.108.0",
+    "crypto": "^1.0.1",
     "dayjs": "^1.11.6",
     "ethers": "^5.7.2",
     "framer-motion": "^7.6.2",
@@ -50,10 +51,12 @@
     "gray-matter": "^4.0.3",
     "hastscript": "^7.1.0",
     "html-react-parser": "^3.0.4",
+    "i18next": "^22.4.6",
     "image-size": "^1.0.2",
     "lodash": "^4.17.21",
     "next": "^13.0.0",
     "next-auth": "^4.15.0",
+    "next-i18next": "^13.0.2",
     "next-mdx-remote": "^4.1.0",
     "next-seo": "^5.11.1",
     "next-translate": "^1.6.0",
@@ -63,6 +66,7 @@
     "qs": "^6.11.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.1.1",
     "react-markdown": "^8.0.3",
     "rehype-autolink-headings": "^6.1.1",
     "rehype-slug": "5.0.1",
@@ -71,7 +75,8 @@
     "rss": "^1.2.2",
     "sharp": "^0.31.1",
     "swr": "^1.3.0",
-    "wagmi": "^0.7.8"
+    "tinacms": "^1.1.2",
+    "wagmi": "^0.9.5"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "13.0.0",
@@ -80,6 +85,7 @@
     "@tailwindcss/typography": "^0.5.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
+    "@tinacms/cli": "^1.0.5",
     "@types/lodash": "^4.14.186",
     "@types/node": "^18.11.7",
     "@types/react": "18.0.24",
@@ -162,54 +168,6 @@
           "varsIgnorePattern": "^_",
           "args": "after-used",
           "argsIgnorePattern": "^_"
-        }
-      ],
-      "simple-import-sort/exports": "warn",
-      "simple-import-sort/imports": [
-        "warn",
-        {
-          "groups": [
-            [
-              "^@?\\w",
-              "^\\u0000"
-            ],
-            [
-              "^.+\\.s?css$"
-            ],
-            [
-              "^@/lib",
-              "^@/hooks"
-            ],
-            [
-              "^@/data"
-            ],
-            [
-              "^@/components",
-              "^@/container"
-            ],
-            [
-              "^@/store"
-            ],
-            [
-              "^@/"
-            ],
-            [
-              "^\\./?$",
-              "^\\.(?!/?$)",
-              "^\\.\\./?$",
-              "^\\.\\.(?!/?$)",
-              "^\\.\\./\\.\\./?$",
-              "^\\.\\./\\.\\.(?!/?$)",
-              "^\\.\\./\\.\\./\\.\\./?$",
-              "^\\.\\./\\.\\./\\.\\.(?!/?$)"
-            ],
-            [
-              "^@/types"
-            ],
-            [
-              "^"
-            ]
-          ]
         }
       ]
     },
