--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "personal-website",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "yarn tinacms dev -c \"next dev\"",
+    "build": "yarn tinacms build && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@tinacms/cli": "^1.0.5",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
@@ -18,6 +19,11 @@
     "next": "13.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-is": "^18.2.0",
+    "tinacms": "^1.1.2",
     "typescript": "4.9.4"
+  },
+  "devDependencies": {
+    "@next/bundle-analyzer": "^13.1.1"
   }
 }
