--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 NEXT_PUBLIC_TINA_CLIENT_ID=14f0eef9-1ab8-492e-a098-a23563bd9a55
 TINA_TOKEN=36ddbd1eb4b3b9ff22dc230d44f63e9f07c1f43a
-NEXT_PUBLIC_EDIT_BRANCH="main"
+NEXT_PUBLIC_EDIT_BRANCH=main
