--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "yarn tinacms dev -c \"next dev\"",
-    "build": "yarn tinacms build && next build",
+    "dev": "pnpm tinacms dev -c \"next dev\"",
+    "build": "pnpm tinacms build && next build",
     "start": "next start",
     "lint": "next lint"
   },
