--- a/package.json
+++ b/package.json
@@ -9,17 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.9",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.1",
+    "@react-spring/web": "^9.6.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@visx/visx": "^2.18.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "framer-motion": "^9.0.1",
     "next": "13.1.1",
+    "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
     "react-is": "^18.2.0",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   },
   "devDependencies": {
