--- a/package.json
+++ b/package.json
@@ -9,18 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.4.9",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
     "@next/font": "13.1.1",
     "@react-spring/web": "^9.6.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@visx/visx": "^2.18.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
-    "framer-motion": "^9.0.1",
     "next": "13.1.1",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
