--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -25,10 +25,13 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-is": "^18.2.0",
+    "react-scroll": "^1.8.9",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "^13.1.1"
+    "@next/bundle-analyzer": "^13.1.1",
+    "@svgr/webpack": "^6.5.1",
+    "webpack": "^5.75.0"
   }
 }
