--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@vercel/og": "^0.0.27",
     "@visx/visx": "^2.18.0",
     "autoprefixer": "^10.4.13",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
+    "flowbite": "^1.6.3",
     "next": "13.1.1",
     "postcss": "^8.4.21",
     "postcss-import": "^15.1.0",
