--- a/package.json
+++ b/package.json
@@ -3,37 +3,60 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "eslint src --fix && yarn format",
+    "format": "prettier -w .",
+    "type-check": "tsc --noEmit",
+    "test:watch": "jest --watch",
+    "test": "jest"
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@next/mdx": "^13.1.6",
     "@react-spring/web": "^9.6.1",
+    "@tabler/icons": "^2.3.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@vercel/og": "^0.0.27",
     "@visx/visx": "^2.18.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
+    "clsx": "^1.2.1",
     "flowbite": "^1.6.3",
+    "flowbite-react": "^0.3.8",
     "next": "13.1.1",
-    "postcss": "^8.4.21",
-    "postcss-import": "^15.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-is": "^18.2.0",
     "react-scroll": "^1.8.9",
+    "tailwind-merge": "^1.9.1"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "8.30.0",
+    "eslint-config-next": "13.1.1",
+    "eslint-config-prettier": "^8.6.0",
+    "husky": "^8.0.3",
+    "jest": "^29.4.2",
+    "postcss": "^8.4.21",
+    "postcss-import": "^15.1.0",
+    "prettier": "^2.8.4",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   },
-  "devDependencies": {
-    "@next/bundle-analyzer": "^13.1.1",
-    "@svgr/webpack": "^6.5.1",
-    "webpack": "^5.75.0"
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx}": [
+      "eslint --max-warnings=5",
+      "prettier -w"
+    ],
+    "src/**/*.{json,css,scss,md,mdx}": [
+      "prettier -w"
+    ]
   }
 }
