--- a/package.json
+++ b/package.json
@@ -15,24 +15,35 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
-    "@next/mdx": "^13.1.6",
     "@react-spring/web": "^9.6.1",
-    "@tabler/icons": "^2.3.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
     "@vercel/og": "^0.0.27",
     "@visx/visx": "^2.18.0",
     "clsx": "^1.2.1",
+    "contentlayer": "^0.3.0",
+    "dayjs": "^1.11.7",
     "flowbite": "^1.6.3",
     "flowbite-react": "^0.3.8",
+    "hastscript": "^7.2.0",
+    "image-size": "^1.0.2",
     "next": "13.1.1",
+    "next-contentlayer": "^0.3.0",
+    "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-is": "^18.2.0",
     "react-scroll": "^1.8.9",
-    "tailwind-merge": "^1.9.1"
+    "rehype-autolink-headings": "^6.1.1",
+    "rehype-pretty-code": "^0.9.3",
+    "rehype-slug": "^5.1.0",
+    "remark-gfm": "^3.0.1",
+    "shiki": "^0.14.1",
+    "tailwind-merge": "^1.9.1",
+    "unist": "^8.0.11",
+    "unist-util-visit": "^4.1.2"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.51.0",
@@ -49,14 +60,5 @@
     "prettier-plugin-tailwindcss": "^0.2.2",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx}": [
-      "eslint --max-warnings=5",
-      "prettier -w"
-    ],
-    "src/**/*.{json,css,scss,md,mdx}": [
-      "prettier -w"
-    ]
   }
 }
