--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-seo": "^5.15.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-is": "^18.2.0",
     "react-scroll": "^1.8.9",
@@ -52,6 +53,8 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "eslint-config-prettier": "^8.6.0",
+    "eslint-import-resolver-typescript": "^3.5.3",
+    "eslint-plugin-import": "^2.27.5",
     "husky": "^8.0.3",
     "jest": "^29.4.2",
     "postcss": "^8.4.21",
