--- a/package.json
+++ b/package.json
@@ -14,52 +14,54 @@
     "test": "jest"
   },
   "dependencies": {
-    "@next/font": "13.1.1",
-    "@react-spring/web": "^9.6.1",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
-    "@vercel/og": "^0.0.27",
-    "@visx/visx": "^2.18.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/font": "13.4.1",
+    "@react-spring/web": "^9.7.2",
+    "@types/node": "20.0.0",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
+    "@types/react-syntax-highlighter": "^15.5.6",
+    "@types/uuid": "^9.0.1",
+    "@vercel/og": "^0.5.4",
+    "@visx/visx": "^3.1.2",
     "clsx": "^1.2.1",
-    "contentlayer": "^0.3.0",
+    "contentlayer": "^0.3.2",
     "dayjs": "^1.11.7",
-    "flowbite": "^1.6.3",
-    "flowbite-react": "^0.3.8",
-    "hastscript": "^7.2.0",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
     "image-size": "^1.0.2",
-    "next": "13.1.1",
-    "next-contentlayer": "^0.3.0",
-    "next-seo": "^5.15.0",
+    "next": "13.4.1",
+    "next-contentlayer": "^0.3.2",
+    "next-seo": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.7.1",
+    "react-icons": "^4.8.0",
     "react-is": "^18.2.0",
     "react-scroll": "^1.8.9",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-pretty-code": "^0.9.3",
-    "rehype-slug": "^5.1.0",
+    "react-syntax-highlighter": "^15.5.0",
+    "rehype-pretty-code": "^0.9.5",
     "remark-gfm": "^3.0.1",
-    "shiki": "^0.14.1",
-    "tailwind-merge": "^1.9.1"
+    "shiki": "^0.14.2",
+    "tailwind-merge": "^1.12.0",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
-    "autoprefixer": "^10.4.13",
-    "eslint": "8.30.0",
-    "eslint-config-next": "13.1.1",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-import-resolver-typescript": "^3.5.3",
+    "@types/mdx": "^2.0.5",
+    "@typescript-eslint/eslint-plugin": "^5.59.2",
+    "@typescript-eslint/parser": "^5.59.2",
+    "autoprefixer": "^10.4.14",
+    "eslint": "8.39.0",
+    "eslint-config-next": "13.4.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "husky": "^8.0.3",
-    "jest": "^29.4.2",
-    "postcss": "^8.4.21",
+    "jest": "^29.5.0",
+    "postcss": "^8.4.23",
     "postcss-import": "^15.1.0",
-    "prettier": "^2.8.4",
-    "prettier-plugin-tailwindcss": "^0.2.2",
-    "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8",
+    "tailwindcss": "^3.3.2",
+    "typescript": "5.0.4"
   }
 }
