--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-syntax-highlighter": "^15.5.0",
     "rehype-pretty-code": "^0.9.5",
     "remark-gfm": "^3.0.1",
+    "remark-mdx": "^2.3.0",
     "shiki": "^0.14.2",
     "tailwind-merge": "^1.12.0",
     "uuid": "^9.0.0"
