--- a/package.json
+++ b/package.json
@@ -38,8 +38,9 @@
     "react-is": "^18.2.0",
     "react-scroll": "^1.8.9",
     "react-syntax-highlighter": "^15.5.0",
-    "rehype-pretty-code": "^0.9.5",
+    "rehype-katex": "^6.0.3",
     "remark-gfm": "^3.0.1",
+    "remark-math": "^5.1.1",
     "remark-mdx": "^2.3.0",
     "shiki": "^0.14.2",
     "tailwind-merge": "^1.12.0",
