--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@mdx-js/react": "^2.3.0",
     "@react-spring/web": "^9.7.2",
+    "@types/js-cookie": "^3.0.3",
     "@types/node": "20.0.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.0",
@@ -29,6 +30,7 @@
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.4",
     "image-size": "^1.0.2",
+    "js-cookie": "^3.0.5",
     "next": "13.4.1",
     "next-contentlayer": "^0.3.2",
     "next-seo": "^6.0.0",
