--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "flowbite-react": "^0.4.4",
     "image-size": "^1.0.2",
     "js-cookie": "^3.0.5",
+    "mdast-util-to-string": "^3.2.0",
+    "meilisearch": "^0.32.4",
     "next": "13.4.3",
     "next-contentlayer": "^0.3.2",
     "react": "18.2.0",
@@ -41,6 +43,7 @@
     "react-scroll": "^1.8.9",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-katex": "^6.0.3",
+    "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
     "remark-mdx": "^2.3.0",
