--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "flowbite-react": "^0.4.4",
     "image-size": "^1.0.2",
     "js-cookie": "^3.0.5",
+    "kbar": "0.1.0-beta.40",
     "mdast-util-to-string": "^3.2.0",
     "meilisearch": "^0.32.4",
-    "next": "13.4.3",
+    "next": "13.4.4",
     "next-contentlayer": "^0.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -57,8 +58,9 @@
     "@typescript-eslint/parser": "^5.59.5",
     "autoprefixer": "^10.4.14",
     "eslint": "8.39.0",
-    "eslint-config-next": "13.4.3",
+    "eslint-config-next": "13.4.4",
     "eslint-config-prettier": "^8.8.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "husky": "^8.0.3",
