--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,7 @@
     "baseUrl": ".",
     "paths": {
       "~/*": ["src/*"],
+      "~public/*": ["public/*"],
       "contentlayer/generated": ["./.contentlayer/generated"]
     }
   },
