--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
     "react-is": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-scroll": "^1.8.9",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-katex": "^6.0.3",
