--- a/package.json
+++ b/package.json
@@ -6,48 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "clean": "sudo rm -rf .contentlayer/.cache .next/cache",
+    "clean": "sudo rm -rf .contentlayer/.cache .next/cache node_modules",
     "lint": "next lint",
     "lint:fix": "eslint src --fix && yarn format",
     "format": "prettier -w .",
-    "type-check": "tsc --noEmit",
-    "test:watch": "jest --watch",
-    "test": "jest"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@floating-ui/react": "^0.24.2",
-    "@mdx-js/react": "^2.3.0",
-    "@react-spring/web": "^9.7.2",
-    "@types/js-cookie": "^3.0.3",
     "@types/node": "20.2.5",
     "@types/react": "18.2.7",
     "@types/react-dom": "18.2.4",
     "@types/react-syntax-highlighter": "^15.5.7",
     "@types/uuid": "^9.0.1",
-    "@vercel/og": "^0.5.6",
-    "@visx/visx": "^3.1.2",
-    "clsx": "^1.2.1",
     "contentlayer": "^0.3.3",
     "dayjs": "^1.11.7",
-    "image-size": "^1.0.2",
-    "js-cookie": "^3.0.5",
     "kbar": "0.1.0-beta.40",
-    "mdast-util-to-string": "^3.2.0",
     "next": "13.4.4",
     "next-contentlayer": "^0.3.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.9.0",
-    "react-is": "^18.2.0",
     "react-paginate": "^8.2.0",
-    "react-scroll": "^1.8.9",
     "react-syntax-highlighter": "^15.5.0",
     "rehype-katex": "^6.0.3",
     "remark": "^14.0.3",
     "remark-gfm": "^3.0.1",
     "remark-math": "^5.1.1",
-    "remark-mdx": "^2.3.0",
-    "shiki": "^0.14.2",
     "tailwind-merge": "^1.12.0",
     "uuid": "^9.0.0"
   },
@@ -56,14 +41,13 @@
     "@typescript-eslint/eslint-plugin": "^5.59.8",
     "@typescript-eslint/parser": "^5.59.8",
     "autoprefixer": "^10.4.14",
+    "clsx": "^1.2.1",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
     "eslint-config-prettier": "^8.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
-    "husky": "^8.0.3",
-    "jest": "^29.5.0",
     "postcss": "^8.4.24",
     "postcss-import": "^15.1.0",
     "prettier": "^2.8.8",
